--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,8 +21,8 @@ services:
     ports:
       # Expose Kafka broker for external connections (e.g., producer from host)
       - "9092:9092"
-      # Internal listener used by Flink within the Docker network
-      - "9093:9093" 
+      # Internal listener used by Flink and producer within the Docker network
+      - "9093:9093"
     environment:
       KAFKA_BROKER_ID: 1
       KAFKA_ZOOKEEPER_CONNECT: 'zookeeper:2181'
@@ -36,12 +36,15 @@ services:
       KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
       KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
       # Create the topic automatically if it doesn't exist
-      KAFKA_CREATE_TOPICS: "crypto-tickers:1:1" 
+      KAFKA_CREATE_TOPICS: "crypto-tickers:1:1"
     networks:
       - flink-net
 
   jobmanager:
-    build: .
+    # build: . # Build using the default Dockerfile in the current directory
+    build:
+      context: .
+      dockerfile: Dockerfile # Explicitly specify the Dockerfile for Flink app
     hostname: jobmanager
     container_name: jobmanager
     ports:
@@ -57,7 +60,10 @@ services:
       - flink-net
 
   taskmanager:
-    build: . # Use the same image built for jobmanager
+    # build: . # Use the same image built for jobmanager
+    build:
+      context: .
+      dockerfile: Dockerfile # Explicitly specify the Dockerfile for Flink app
     hostname: taskmanager # Unique hostname is good practice, though not strictly needed for one TM
     container_name: taskmanager
     depends_on:
@@ -67,14 +73,17 @@ services:
     environment:
       FLINK_PROPERTIES: |
         jobmanager.rpc.address: jobmanager
-        taskmanager.numberOfTaskSlots: 2 
+        taskmanager.numberOfTaskSlots: 2
         # Add any other Flink config options here if needed
     networks:
       - flink-net
 
   # Service to submit the Flink job after the cluster is ready
   job-submitter:
-    build: .
+    # build: .
+    build:
+      context: .
+      dockerfile: Dockerfile # Explicitly specify the Dockerfile for Flink app
     container_name: job-submitter
     depends_on:
       - jobmanager
@@ -89,16 +98,27 @@ services:
         echo 'JobManager is ready. Submitting job...';
         flink run \
           -d \
-          /opt/flink/usrlib/flink-crypto-demo.jar \
-          --kafka-brokers kafka:9093 \
-          --kafka-topic crypto-tickers \
-          --consumer-group flink-crypto-consumer
-          # Note: We pass args here, but the current StreamingJob.java uses constants.
-          # Modify StreamingJob.java to accept ParameterTool if you want to use these args.
+          /opt/flink/usrlib/flink-crypto-demo.jar
+          # Note: Arguments removed as StreamingJob.java uses constants now.
         echo 'Job submission command executed.'
       "
     networks:
       - flink-net
+
+  # NEW: Service for the Python data producer
+  crypto-producer:
+    build:
+      context: . # Use the current directory as context
+      dockerfile: producer.Dockerfile # Specify the new Dockerfile
+    container_name: crypto-producer
+    depends_on:
+      - kafka # Ensure Kafka is ready before starting the producer
+    environment:
+      # Pass the internal Kafka broker address to the Python script
+      KAFKA_BROKERS_INTERNAL: "kafka:9093"
+    networks:
+      - flink-net
+    # restart: on-failure # Optional: Restart the producer if it fails
 
 networks:
   flink-net:
